--- a/pscp final/templates/page1.html
+++ b/pscp final/templates/page1.html
@@ -9,9 +9,7 @@
     <h1>page1</h1>
     <p>ไม่ว่าจะสุข หรือ ทุกข์ เราก็เชื่อว่า</p>
     <p>ยังมีวันดี ๆ ข้างหน้ารอ {{data.name}} อยู่นะ</p>
-    <ul>
-        <a href="/page2"><input type="submit" value="ต่อไป"></a>
-        <a href="/home"><input type="submit" value="กลับ"></a>
-    </ul>
+    <a href="/page2"><input type="submit" value="ต่อไป"></a>
+    <a href="/login"><input type="submit" value="กลับ"></a>
 </body>
 </html>
