--- a/pscp final/templates/page3.html
+++ b/pscp final/templates/page3.html
@@ -9,8 +9,7 @@
     <h1>page3</h1>
     <p>แล้วมีเรื่องที่ไม่สบายใจไหม</p>
     <p>พิมพ์บอกได้นะ</p>
-    <ul>
+    <a href="/page4"><input type="submit" value="ต่อไป"></a>
     <a href="/page2"><input type="submit" value="กลับ"></a>
-    </ul>
 </body>
 </html>
