--- a/pscp final/templates/page4.html
+++ b/pscp final/templates/page4.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>page4</title>
+    <title>hello</title>
 </head>
 <body>
-    <h1>page4</h1>
-    <p>พักได้นะ แต่อย่ายอมแพ้เลย</p>
-    <p>สู้มาตั้งไกลแล้ววว</p>
-    <p>เราอยากให้ {{name}} เชื่อในตัวเองนะ</p>
-    <a href="/page3"><input type="submit" value="กลับ"></a>
+    <h1>การเดินทางอันแสนยาวนานตลอด {{data.age}} ปีของ {{data.name}}</h1>
+    <a href="page5.html"><input type="submit" value="ต่อไป"></a>
 </body>
 </html>
