--- a/pscp final/templates/page5.html
+++ b/pscp final/templates/page5.html
@@ -6,10 +6,10 @@
     <title>page1</title>
 </head>
 <body>
-    <h1>page1</h1>
+    <h1></h1>
     <p>ไม่ว่าจะสุข หรือ ทุกข์ เราก็เชื่อว่า</p>
     <p>ยังมีวันดี ๆ ข้างหน้ารอ {{data.name}} อยู่นะ</p>
-    <a href="/page2"><input type="submit" value="ต่อไป"></a>
-    <a href="/login"><input type="submit" value="กลับ"></a>
+    <a href="page6.html"><input type="submit" value="ต่อไป"></a>
+    
 </body>
 </html>
