--- a/pscp final/templates/objective.html
+++ b/pscp final/templates/objective.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="objective.css">
+    <title>WELL U</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='objective.css') }}">
 </head>
+
 <body>
     <h1>วัตถุประสงค์ </h1>
     <p>เรื่องราวนี้มีวัตถุประสงค์เพื่อรับฟังปัญหาความเครียดและให้กำลังใจเท่านั้น <br>
@@ -13,6 +15,7 @@
         <br>โปรเจคนี้จัดทำขึ้นเพื่อเป็นส่วนหนึ่งของรายวิชา<br>
         Problem solving and computer programming
     </p>
-    <a class="continue" href="page3.html">ต่อไป</a>
+    <a class="continue" href="/page3">ต่อไป</a>
 </body>
+
 </html>
