--- a/pscp final/templates/page5.html
+++ b/pscp final/templates/page5.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>page1</title>
+    <title>WELL U</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='page5.css') }}">
 </head>
+
 <body>
-    <h1></h1>
-    <p>ไม่ว่าจะสุข หรือ ทุกข์ เราก็เชื่อว่า</p>
-    <p>ยังมีวันดี ๆ ข้างหน้ารอ {{data.name}} อยู่นะ</p>
-    <a href="page6.html"><input type="submit" value="ต่อไป"></a>
-    
+    <p>ไม่ว่าจะสุข หรือ ทุกข์ เราก็เชื่อว่า ยังมีวันดี ๆ ข้างหน้ารอ {{data.name}} อยู่นะ</p>
+    <a class="continue" href="/page6">ต่อไป</a>
+
 </body>
+
 </html>
