--- a/pscp final/templates/page8.html
+++ b/pscp final/templates/page8.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>page4</title>
+    <title>WELL U</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='page8.css') }}">
 </head>
+
 <body>
-    <h1>page4</h1>
-    <p>พักได้นะ แต่อย่ายอมแพ้เลย</p>
-    <p>สู้มาตั้งไกลแล้ววว</p>
-    <p>เราอยากให้ {{name}} เชื่อในตัวเองนะ</p>
-    <a href="page9.html"><input type="submit" value="ต่อไป"></a>
+    <h3>ถึง {{name}}</h3>
+    <p>พักได้นะ แต่อย่ายอมแพ้เลย สู้มาตั้งไกลแล้ววว เราอยากให้ {{name}} เชื่อในตัวเองนะ</p>
+    <!-- <a href="/page9"><input type="submit" value="ต่อไป"></a> -->
+    <a class="continue" href="/page9">ต่อไป</a>
 </body>
+
 </html>
