--- a/pscp final/templates/page10.html
+++ b/pscp final/templates/page10.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="page10.css">
+    <title>WELL U</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='page10.css') }}">
 </head>
+
 <body>
     <h1>WELL U</h1>
-    <img class="i2" src="img/i2.png" alt="">
+    <img class="i2" src="{{ url_for('static', filename='img/i2.png') }}" alt="">
 </body>
+
 </html>
