--- a/pscp final/templates/page3.html
+++ b/pscp final/templates/page3.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
-    <link rel="stylesheet" href="page3.css">
+    <title>WELL U</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='page3.css') }}">
 </head>
+
 <body>
-    <img class="i3"src="img/i3.png" width="1147" height="790" alt="">
-    <form action="{{url_for('helloname')}}" method="GET">
-        <div class="form-group">
+    <img class="i3" src="{{ url_for('static', filename='img/i3.png') }}" width="1147" height="790" alt="">
+    <form action="{{url_for('page4')}}" method="GET">
+        <div class="name">
             <label for="">ชื่อ (name)</label>
             <input type="text" name="fname" class="form-control">
         </div>
-        <div class="form-group">
+        <div class="age">
             <label for="">อายุ (age)</label>
             <input type="text" name="fage" class="form-control">
         </div>
         <br>
     </form>
-    
-    <a class="continue" href="page4.html">ต่อไป</a>
+    <!-- <a href="/page4"><input type="submit" value="ต่อไป"></a> -->
+    <a class="continue" href="/page4">ต่อไป</a>
 </body>
+
 </html>
