--- a/pscp final/templates/page7.html
+++ b/pscp final/templates/page7.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>page3</title>
+    <title>WELL U</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='page7.css') }}">
 </head>
+
 <body>
-    <h1></h1>
-    <p>แล้วมีเรื่องที่ไม่สบายใจไหม</p>
-    <p>พิมพ์บอกได้นะ</p>
-    <a href="page8.html"><input type="submit" value="ต่อไป"></a>
-    
+    <div>
+        <label for=""></label>
+        <textarea name="" cols="100" rows="20" required></textarea>
+    </div>
+    <p>แล้วมีเรื่องที่ไม่สบายใจไหม พิมพ์บอกได้นะ</p>
+    <a class="continue" href="/page8">ต่อไป</a>
+    <!-- <a href="/page8"><input type="submit" value="ต่อไป"></a> -->
+
 </body>
+
 </html>
