--- a/pscp final/templates/page9.html
+++ b/pscp final/templates/page9.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>page3</title>
-    <link rel="stylesheet" href="page9.css">
+    <title>WELL U</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='page9.css') }}">
 </head>
+
 <body>
     <h1>People may give up on you,<br>
         but don't you ever give up <br>
@@ -16,14 +18,16 @@
             และผ่อนคลาย เช่น ดูหนัง ฟังเพลง</p>
         <p>อย่าลืมพักผ่อนให้เพียงพอ ทานอาหารอร่อย ๆ<br>
             แล้วพรุ่งนี้ไปสู้กันใหม่ ตัวเราในอนาคต
-            <br>รอเราคนปัจจุบันอยู่นะ<br></p>
+            <br>รอเราคนปัจจุบันอยู่นะ<br>
+        </p>
         <p>การพูดคุยกับคนที่เราไว้ใจเป็นอีกหนึ่งวิธี<br>
             จัดการความเครียดที่ดีและง่ายที่สุด อาจทำให้<br>
             เราได้มุมมองการแก้ปัญหาได้ไอเดียใหม่ ๆ<br>
             จากคนที่เราคุยด้วย</p>
     </div>
-    <img class="i4"src="img/i4.png"  width="520px" height="708px">
-    <a class="continue" href="page10.html">สิ้นสุดเรื่องราว</a>
+    <img class="i4" src="{{ url_for('static', filename='img/i4.png') }}" width="520px" height="708px">
+    <a class="continue" href="/page10">สิ้นสุดเรื่องราว</a>
 
 </body>
+
 </html>
