--- a/pscp final/templates/welcome.html
+++ b/pscp final/templates/welcome.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WELL U</title>
-    <link rel="stylesheet" href="welcome.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='welcome.css') }}">
 </head>
+
 <body>
     <h1>WELL U</h1>
     <p>พร้อมรับฟัง เคียงข้างคุณ<br>ไม่ได้เป็นหมอ แต่เป็นห่วงนะ</p>
     <div class="i1">
-        <img src="img/i1.png" width="798px" height="613px" alt="">
+        <img src="{{ url_for('static', filename='img/i1.png') }}" width="798px" height="613px" alt="">
     </div>
-    <img class="i2" src="img/i2.png" width="81px" height="31.32px" alt="">
-    <a class="continue" href="objective.html">ต่อไป</a>
+    <img class="i2" src="{{ url_for('static', filename='img/i2.png') }}" width="81px" height="31.32px" alt="">
+    <a class="continue" href="/objective">ต่อไป</a>
 
 </body>
+
 </html>
