--- a/pscp final/templates/welcome.html
+++ b/pscp final/templates/welcome.html
@@ -15,7 +15,7 @@
         <img src="{{ url_for('static', filename='img/i1.png') }}" width="798px" height="613px" alt="">
     </div>
     <img class="i2" src="{{ url_for('static', filename='img/i2.png') }}" width="81px" height="31.32px" alt="">
-    <a class="continue" href="/objective">ต่อไป</a>
+    <a class="continue" href="/objective">เริ่มต้น</a>
 
 </body>
 
