--- a/pscp final/static/page8.css
+++ b/pscp final/static/page8.css
@@ -1,3 +1,11 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Kanit;
+    color: #585858;
+}
+
 .continue {
     position: absolute;
     bottom: 100px;
@@ -19,4 +27,25 @@
 
 .continue:hover {
     background-color: #8a8686;
+}
+
+p {
+    font-size: 20px;
+    margin: 10px 0 20px;
+    position: relative;
+    right: -420px;
+    
+}
+
+h3 {
+    font-size: 24px;
+    margin: 10px 0 20px;
+    position: relative;
+    right: -420px;
+}
+
+.i7 {
+    display: flex;
+    position: relative;
+    right: -542px;
 }
