--- a/pscp final/templates/page8.html
+++ b/pscp final/templates/page8.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <img class="i7" src="{{ url_for('static', filename='img/i7.svg') }}" width="356" height="446" alt="">
     <h3>ถึง {{name}}</h3>
     <p>พักได้นะ แต่อย่ายอมแพ้เลย สู้มาตั้งไกลแล้ววว เราอยากให้ {{name}} เชื่อในตัวเองนะ</p>
     <!-- <a href="/page9"><input type="submit" value="ต่อไป"></a> -->
