--- a/pscp final/templates/page4.html
+++ b/pscp final/templates/page4.html
@@ -10,7 +10,7 @@
 
 <body>
     <img class="i5" src="{{ url_for('static', filename='img/i5.svg') }}" width="764px" height="712px" alt="">
-    <p>การเดินทางอันแสนยาวนานตลอด {{data.age}} ปีของ {{data.name}}</p>
+    <p>การเดินทางอันแสนยาวนานตลอด {{ age }} ปีของ {{ username }}</p>
     <!-- <a class="continue" href="/page5"><input type="submit" value="ต่อไป"></a> -->
     <a class="continue" href="/page5">ต่อไป</a>
 </body>
