--- a/pscp final/static/page6.css
+++ b/pscp final/static/page6.css
@@ -32,3 +32,10 @@ p {
     width: 825px;
     height: 266px;
 }
+
+textarea {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
