--- a/pscp final/static/page7.css
+++ b/pscp final/static/page7.css
@@ -28,7 +28,14 @@ p {
     margin: 10px 0 20px;
     position: absolute;
     top: 650px;
-    left: 550px;
+    left: 600px;
     width: 825px;
     height: 266px;
+}
+
+textarea {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -100;
 }
