--- a/pscp final/templates/page4.html
+++ b/pscp final/templates/page4.html
@@ -13,6 +13,7 @@
     <p>การเดินทางอันแสนยาวนานตลอด {{ age }} ปีของ {{ username }}</p>
     <!-- <a class="continue" href="/page5"><input type="submit" value="ต่อไป"></a> -->
     <a class="continue" href="/page5">ต่อไป</a>
+    <!-- <input class="continue" type="submit" value="ต่อไป"> -->
 </body>
 
 </html>
