--- a/pscp final/templates/page5.html
+++ b/pscp final/templates/page5.html
@@ -10,7 +10,7 @@
 
 <body>
     <img class="i6" src="{{ url_for('static', filename='img/i6.png') }}" width="1000" height="700" alt="">
-    <p>ไม่ว่าจะสุข หรือ ทุกข์ เราก็เชื่อว่า ยังมีวันดี ๆ ข้างหน้ารอ {{data.name}} อยู่นะ</p>
+    <p>ไม่ว่าจะสุข หรือ ทุกข์ เราก็เชื่อว่า ยังมีวันดี ๆ ข้างหน้ารอ {{name}} อยู่นะ</p>
     <a class="continue" href="/page6">ต่อไป</a>
 
 </body>
