--- a/pscp final/templates/page6.html
+++ b/pscp final/templates/page6.html
@@ -11,7 +11,7 @@
 <body>
     <div>
         <label for=""></label>
-        <textarea class="textarea" name="" cols="100" rows="20" required></textarea>
+        <textarea class="textarea" name="textarea" cols="130" rows="35"></textarea>
     </div>
     <p>ไหนลองบอกสิ่งที่ชอบมาหน่อยยย เราว่าน่าสนใจแน่เลยย</p>
     <a class="continue" href="/page7">ต่อไป</a>
