--- a/pscp final/static/page6.css
+++ b/pscp final/static/page6.css
@@ -28,7 +28,7 @@ p {
     margin: 10px 0 20px;
     position: absolute;
     top: 650px;
-    left: 550px;
+    left: 525px;
     width: 825px;
     height: 266px;
 }
@@ -37,5 +37,5 @@ textarea {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    
+    top: 100;
 }
