--- a/pscp final/templates/page7.html
+++ b/pscp final/templates/page7.html
@@ -11,7 +11,7 @@
 <body>
     <div>
         <label for=""></label>
-        <textarea class="textarea" name="" cols="100" rows="20" required></textarea>
+        <textarea class="textarea" name="textarea" cols="130" rows="35"></textarea>
     </div>
     <p>แล้วมีเรื่องที่ไม่สบายใจไหม พิมพ์บอกได้นะ</p>
     <a class="continue" href="/page8">ต่อไป</a>
