--- a/pscp final/templates/page3.html
+++ b/pscp final/templates/page3.html
@@ -10,7 +10,7 @@
 
 <body>
     <img class="i3" src="{{ url_for('static', filename='img/i3.png') }}" width="1147" height="790" alt="">
-    <form action="{{ url_for('page4') }}" method="post">
+    <form action="{{ url_for('submit') }}" method="post">
         <div class="name">
             <label for="">ชื่อ (name)</label>
             <input type="text" name="username" placeholder="Your Name" required>
