--- a/pscp final/templates/page5.html
+++ b/pscp final/templates/page5.html
@@ -10,8 +10,8 @@
 
 <body>
     <img class="i6" src="{{ url_for('static', filename='img/i6.png') }}" width="1000" height="700" alt="">
-    <p>ไม่ว่าจะสุข หรือ ทุกข์ เราก็เชื่อว่า ยังมีวันดี ๆ ข้างหน้ารอ {{name}} อยู่นะ</p>
-    <a class="continue" href="/page6">ต่อไป</a>
+    <p>ไม่ว่าจะสุข หรือ ทุกข์ เราก็เชื่อว่า ยังมีวันดี ๆ ข้างหน้ารอ {{username}} อยู่นะ</p>
+    <a class="continue" href="{{ url_for('page6', username=username) }}">ต่อไป</a>
 
 </body>
 
