--- a/pscp final/templates/page7.html
+++ b/pscp final/templates/page7.html
@@ -14,7 +14,7 @@
         <textarea class="textarea" name="textarea" cols="130" rows="35"></textarea>
     </div>
     <p>แล้วมีเรื่องที่ไม่สบายใจไหม พิมพ์บอกได้นะ</p>
-    <a class="continue" href="/page8">ต่อไป</a>
+    <a class="continue" href="{{ url_for('page8', username=username) }}">ต่อไป</a>
     <!-- <a href="/page8"><input type="submit" value="ต่อไป"></a> -->
 
 </body>
