--- a/pscp final/templates/page5.html
+++ b/pscp final/templates/page5.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img class="i6" src="{{ url_for('static', filename='img/i6.png') }}" width="1000" height="700" alt="">
+    <img class="i6" src="{{ url_for('static', filename='img/i6.svg') }}" width="1056" height="514" alt="">
     <p>ไม่ว่าจะสุข หรือ ทุกข์ เราก็เชื่อว่า ยังมีวันดี ๆ ข้างหน้ารอ {{username}} อยู่นะ</p>
     <a class="continue" href="{{ url_for('page6', username=username) }}">ต่อไป</a>
 
