--- a/pscp final/templates/page6.html
+++ b/pscp final/templates/page6.html
@@ -11,11 +11,10 @@
 <body>
     <div>
         <label for=""></label>
-        <textarea class="textarea" name="textarea" cols="130" rows="35"></textarea>
+        <textarea class="textarea" name="textarea" placeholder="พิมพ์ตรงนี้..." cols="130" rows="35"></textarea>
     </div>
     <p>ไหนลองบอกสิ่งที่ชอบมาหน่อยยย เราว่าน่าสนใจแน่เลยย</p>
     <a class="continue" href="{{ url_for('page7', username=username) }}">ต่อไป</a>
-    <!-- <a href="/page7"><input type="submit" value="ต่อไป"></a> -->
 </body>
 
 </html>
