--- a/pscp final/templates/page7.html
+++ b/pscp final/templates/page7.html
@@ -11,11 +11,10 @@
 <body>
     <div>
         <label for=""></label>
-        <textarea class="textarea" name="textarea" cols="130" rows="35"></textarea>
+        <textarea class="textarea" name="textarea" placeholder="พิมพ์ตรงนี้..." cols="130" rows="35"></textarea>
     </div>
     <p>แล้วมีเรื่องที่ไม่สบายใจไหม พิมพ์บอกได้นะ</p>
     <a class="continue" href="{{ url_for('page8', username=username) }}">ต่อไป</a>
-    <!-- <a href="/page8"><input type="submit" value="ต่อไป"></a> -->
 
 </body>
 
