--- a/pscp final/static/page5.css
+++ b/pscp final/static/page5.css
@@ -1,8 +1,4 @@
-.continue {
-    position: absolute;
-    bottom: 100px;
-    right: 100px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .continue {
     background-color: #484848;
@@ -32,14 +28,6 @@ p {
     width: 825px;
     height: 266px;
 }
-
-/* .i6 {
-    position: absolute;
-    top: 200px;
-    right: 5px;
-    width: 100%;
-} */
-
 .i6 {
     display: block;
     margin-top: 13%;
