--- a/pscp final/static/page7.css
+++ b/pscp final/static/page7.css
@@ -1,8 +1,4 @@
-.continue {
-    position: absolute;
-    bottom: 100px;
-    right: 100px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .continue {
     background-color: #484848;
@@ -28,14 +24,13 @@ p {
     margin: 10px 0 20px;
     position: absolute;
     top: 650px;
-    left: 600px;
+    left: 795px;
     width: 825px;
     height: 266px;
 }
 
 textarea {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    top: 100;
+    left: 500px;
+    top: 50px;
+    position: absolute;
 }
