--- a/pscp final/static/page8.css
+++ b/pscp final/static/page8.css
@@ -1,17 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+body{
+    overflow: hidden;
+}
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Kanit;
-    color: #585858;
 }
-
-.continue {
-    position: absolute;
-    bottom: 100px;
-    right: 100px;
-}
-
 .continue {
     background-color: #484848;
     color: white;
@@ -24,21 +19,22 @@
     bottom: 100px;
     right: 100px;
 }
-
 .continue:hover {
     background-color: #8a8686;
 }
-
 p {
+    font-family: Kanit;
     font-size: 20px;
+    color: #2B2A2A;
     margin: 10px 0 20px;
     position: relative;
     right: -420px;
-    
 }
 
 h3 {
+    font-family: Kanit;
     font-size: 24px;
+    color: #585858;
     margin: 10px 0 20px;
     position: relative;
     right: -420px;
@@ -47,5 +43,5 @@ h3 {
 .i7 {
     display: flex;
     position: relative;
-    right: -542px;
+    right: -700px;
 }
