--- a/pscp final/static/page4.css
+++ b/pscp final/static/page4.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body{
     overflow: hidden;
+    background-color: rgb(245, 245, 245);
 }
 .i10 {
     position: absolute;
     top: 250px;
-    right: 700px;
+    right: 450px;
 }
 .continue {
     background-color: #484848;
@@ -28,8 +29,8 @@ p {
     color: #585858;
     margin: 10px 0 20px;
     position: absolute;
-    top: 250px;
-    left: 700px;
+    top: 200px;
+    left: 550px;
     width: 825px;
     height: 266px;
 }
