--- a/pscp final/templates/page10.html
+++ b/pscp final/templates/page10.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +8,7 @@
 </head>
 
 <body>
-    <h1>WELL U</h1>
-    <img class="i2" src="{{ url_for('static', filename='img/i2.png') }}" alt="">
+    <h1 alt="Zoom In Image" class="zoom-img">WELL U</h1>
+    <img class="zoom-img" src="{{ url_for('static', filename='img/i2.png') }}" alt="Zoom In Image">
 </body>
-
 </html>
